ngsa-memory.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngsa-memory
  namespace: ngsa
  labels:
    app.kubernetes.io/name: ngsa-memory
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: ngsa-memory
  template:
    metadata:
      labels:
        app: ngsa-memory
        version: beta-2209-25-06
        deploy: 22-09-25-06-06-57
    spec:
      nodeSelector:
        node: worker
      containers:
        - name: app
          image: ghcr.io/retaildevcrews/ngsa-app:beta
          imagePullPolicy: Always
          args: 
          - --in-memory
          - --prometheus
          - --zone
          - dev
          - --region
          - dev
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /version
              port: 8080
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 300
            httpGet:
              path: /healthz
              port: 8080
          resources:
            limits:
              cpu: 2000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 10001
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - emptyDir: {}
          name: tmp
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      # nodeSelector:
      #   agentpool: prometheusnp

---
apiVersion: v1
kind: Service
metadata:
  name: ngsa-memory
  namespace: ngsa
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ngsa-memory
