virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ngsa-memory
  namespace: istio-ingress
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/ngsa-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: ngsa-memory.ngsa.svc.cluster.local
